<resources>
    <string name="app_name">Raw sensor recorder</string>
    <string name="disconnected">Disconnected</string>
    <string name="scanning">Scanning</string>
    <string name="connecting">Connecting</string>
    <string name="reconnecting">Reconnecting</string>
    <string name="discovering_services">Discovering services</string>
    <string name="handshake">Handshake</string>
    <string name="connected">Connected</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="pairing">Pairing</string>
    <string name="start_sensor_notifications">Start sensor notifications</string>
    <string name="stop_sensor_notifications">Stop sensor notifications</string>
    <string name="start_sensor_recording">Start sensor recording</string>
    <string name="stop_sensor_recording">Stop sensor recording</string>
    <string name="log_timestamp_pattern">yyyy-MM-dd HH:mm:ss.SSS</string>
    <string name="log_file_date_pattern_prefix">yyyyMMdd\'_\'HH\'_\'mm\'_\'ss</string>
    <string name="start_self_tests">Start self-tests</string>
    <string name="start_advanced_calibration">Start advanced calibration</string>
</resources>