<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:id="@+id/activity_main_connect_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connect" />

            <Button
                android:id="@+id/activity_main_disconnect_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disconnect" />

            <TextView
                android:id="@+id/activity_main_connection_state_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <Button
                android:id="@+id/activity_main_start_sensor_notifications_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_sensor_notifications" />

            <Button
                android:id="@+id/activity_main_stop_sensor_notifications_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stop_sensor_notifications" />

            <Button
                android:id="@+id/activity_main_start_sensor_recording_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_sensor_recording" />

            <Button
                android:id="@+id/activity_main_stop_sensor_recording_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stop_sensor_recording" />

            <TextView
                android:id="@+id/activity_main_sensor_recording_count_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>